--- a/AmazonScrapping.ipynb
+++ b/AmazonScrapping.ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>Data Scrapping from Amazon</center>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 01. Requirements"
    ]
   },
@@ -176,10 +184,66 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03. Copy link of Amazon page from which you want to scrape Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "URL = \"https://www.amazon.com/s?k=playstation+5&sprefix=pla%2Caps%2C378&ref=nb_sb_ss_w_hit-vc-p0_playstation-5_k0_1_3\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 04. Create Your Own User Agent"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Go to --> https://www.whatismybrowser.com/detect/   and click on what is my user agent?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare the header for request\n",
+    "HEADERS = ({'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36', 'Accepted-Language':'en-US, en;q=0.5'})"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05. HTTP Request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
