--- a/AmazonScrapping.ipynb
+++ b/AmazonScrapping.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# Prepare the header for request\n",
-    "HEADERS = ({'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36', 'Accepted-Language':'en-US, en;q=0.5'})"
+    "HEADERS = ({'User-Agent':'', 'Accepted-Language':'en-US, en;q=0.5'})"
    ]
   },
   {
@@ -568,6 +568,329 @@
    ],
    "source": [
     "newSoup.find(\"span\", attrs={'class':'a-icon-alt'}).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center>Full Code</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests \n",
+    "import pandas as pd\n",
+    "\n",
+    "def title(soup):\n",
+    "\n",
+    "    try:\n",
+    "        title = soup.find(\"span\", attrs={'id':'productTitle'}).text.strip()\n",
+    "    except:\n",
+    "        title = \"Not Found\"\n",
+    "    \n",
+    "    return title\n",
+    "\n",
+    "def price(soup):\n",
+    "\n",
+    "    try:\n",
+    "        price = soup.find(\"span\", attrs={'class':'a-price aok-align-center'}).find(\"span\", attrs={'class':'a-offscreen'}).text\n",
+    "    except:\n",
+    "        price = \"Not Found\"\n",
+    "    \n",
+    "    return price\n",
+    "\n",
+    "def ratings(soup):\n",
+    "\n",
+    "    try:\n",
+    "        ratings = soup.find(\"span\", attrs={'class':'a-icon-alt'}).text\n",
+    "    except:\n",
+    "        ratings = \"Not Found\"\n",
+    "    \n",
+    "    return ratings\n",
+    "\n",
+    "# def title():\n",
+    "\n",
+    "# def title()\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    # url of webpage\n",
+    "    URL = \"https://www.amazon.com/s?k=playstation+5&sprefix=pla%2Caps%2C378&ref=nb_sb_ss_w_hit-vc-p0_playstation-5_k0_1_3\"\n",
+    "\n",
+    "    # User agent\n",
+    "    # Prepare the header for request\n",
+    "    HEADERS = ({'User-Agent':'', 'Accepted-Language':'en-US, en;q=0.5'})\n",
+    "\n",
+    "    # HTTP Request\n",
+    "    webPage = requests.get(URL, headers=HEADERS)\n",
+    "\n",
+    "    # Convert the cotent into HTML format using soup\n",
+    "    soup = BeautifulSoup(webPage.content, \"html.parser\")\n",
+    "\n",
+    "    # Extract the links\n",
+    "    links = soup.find_all(\"a\", attrs={'class':'a-link-normal s-underline-text s-underline-link-text s-link-style a-text-normal'})\n",
+    "\n",
+    "    # store in list\n",
+    "    linksList = []\n",
+    "\n",
+    "    for link in links:\n",
+    "        linksList.append(link.get('href'))\n",
+    "\n",
+    "    data = {\"Title\":[], \"Price\":[], \"Ratings\":[]} #, \"Reviews\":[], \"Availability\":[]\n",
+    "\n",
+    "    for link in linksList:\n",
+    "        newWebPage = requests.get(\"https://www.amazon.com\" + link, headers=HEADERS)\n",
+    "        newSoup = BeautifulSoup(newWebPage.content, \"html.parser\")\n",
+    "\n",
+    "        data['Title'].append(title(newSoup))\n",
+    "        data['Price'].append(price(newSoup))\n",
+    "        data['Ratings'].append(ratings(newSoup))\n",
+    "        # data['Reviews'].append(reviews(newSoup))\n",
+    "        # data['Availability'].append(availability(newSoup)) \n",
+    "\n",
+    "    df = pd.DataFrame.from_dict(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Ratings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Lord of the Rings: Gollum (PS5)</td>\n",
+       "      <td>$59.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PlayStation PS5 Console – God of War Ragnarök ...</td>\n",
+       "      <td>$509.00</td>\n",
+       "      <td>4.8 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PlayStation 5 Console CFI-1215A01X</td>\n",
+       "      <td>$499.00</td>\n",
+       "      <td>4.8 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PlayStation 5 Console CFI-1102A</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.9 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PlayStation 5 Digital Edition - CFI-1102B</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.9 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PlayStation 5 Digital Edition</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.9 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Playstation DualSense Wireless Controller</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.8 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Remnant 2 - PlayStation 5</td>\n",
+       "      <td>$49.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DualSense Edge Wireless Controller</td>\n",
+       "      <td>$199.00</td>\n",
+       "      <td>4.8 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>$50 PlayStation Store Gift Card [Digital Code]</td>\n",
+       "      <td>$50.00</td>\n",
+       "      <td>4.7 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Shadows Over Loathing Collector’s Edition - Pl...</td>\n",
+       "      <td>$99.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cult of the Lamb Standard Edition – PlayStation 5</td>\n",
+       "      <td>$34.96</td>\n",
+       "      <td>5.0 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>$100 PlayStation Store Gift Card [Digital Code]</td>\n",
+       "      <td>$100.00</td>\n",
+       "      <td>4.7 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ASSASSIN'S CREED MIRAGE - STANDARD EDITION, PL...</td>\n",
+       "      <td>$49.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Postal 4: No Regerts - PlayStation 5</td>\n",
+       "      <td>$39.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Forspoken - PlayStation 5</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.4 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Turtle Beach Stealth 600 Gen 2 USB Wireless Am...</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.3 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Shadows Over Loathing Physical Edition - PlayS...</td>\n",
+       "      <td>$44.99</td>\n",
+       "      <td>Previous page of related Sponsored Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Hot Wheels Unleashed - PlayStation 5</td>\n",
+       "      <td>$19.99</td>\n",
+       "      <td>4.7 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Crisis Core: Final Fantasy VII Reunion - PlayS...</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.7 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Turtle Beach Stealth Pro Multiplatform Wireles...</td>\n",
+       "      <td>$329.99</td>\n",
+       "      <td>4.7 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>LEGO Brawls - PlayStation 5</td>\n",
+       "      <td>Not Found</td>\n",
+       "      <td>4.5 out of 5 stars</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Title      Price  \\\n",
+       "0                 The Lord of the Rings: Gollum (PS5)     $59.99   \n",
+       "1   PlayStation PS5 Console – God of War Ragnarök ...    $509.00   \n",
+       "2                  PlayStation 5 Console CFI-1215A01X    $499.00   \n",
+       "3                     PlayStation 5 Console CFI-1102A  Not Found   \n",
+       "4           PlayStation 5 Digital Edition - CFI-1102B  Not Found   \n",
+       "5                       PlayStation 5 Digital Edition  Not Found   \n",
+       "6           Playstation DualSense Wireless Controller  Not Found   \n",
+       "7                           Remnant 2 - PlayStation 5     $49.99   \n",
+       "8                  DualSense Edge Wireless Controller    $199.00   \n",
+       "9      $50 PlayStation Store Gift Card [Digital Code]     $50.00   \n",
+       "10  Shadows Over Loathing Collector’s Edition - Pl...     $99.99   \n",
+       "11  Cult of the Lamb Standard Edition – PlayStation 5     $34.96   \n",
+       "12    $100 PlayStation Store Gift Card [Digital Code]    $100.00   \n",
+       "13  ASSASSIN'S CREED MIRAGE - STANDARD EDITION, PL...     $49.99   \n",
+       "14               Postal 4: No Regerts - PlayStation 5     $39.99   \n",
+       "15                          Forspoken - PlayStation 5  Not Found   \n",
+       "16  Turtle Beach Stealth 600 Gen 2 USB Wireless Am...  Not Found   \n",
+       "17  Shadows Over Loathing Physical Edition - PlayS...     $44.99   \n",
+       "18               Hot Wheels Unleashed - PlayStation 5     $19.99   \n",
+       "19  Crisis Core: Final Fantasy VII Reunion - PlayS...  Not Found   \n",
+       "20  Turtle Beach Stealth Pro Multiplatform Wireles...    $329.99   \n",
+       "21                        LEGO Brawls - PlayStation 5  Not Found   \n",
+       "\n",
+       "                                        Ratings  \n",
+       "0   Previous page of related Sponsored Products  \n",
+       "1                            4.8 out of 5 stars  \n",
+       "2                            4.8 out of 5 stars  \n",
+       "3                            4.9 out of 5 stars  \n",
+       "4                            4.9 out of 5 stars  \n",
+       "5                            4.9 out of 5 stars  \n",
+       "6                            4.8 out of 5 stars  \n",
+       "7   Previous page of related Sponsored Products  \n",
+       "8                            4.8 out of 5 stars  \n",
+       "9                            4.7 out of 5 stars  \n",
+       "10  Previous page of related Sponsored Products  \n",
+       "11                           5.0 out of 5 stars  \n",
+       "12                           4.7 out of 5 stars  \n",
+       "13  Previous page of related Sponsored Products  \n",
+       "14  Previous page of related Sponsored Products  \n",
+       "15                           4.4 out of 5 stars  \n",
+       "16                           4.3 out of 5 stars  \n",
+       "17  Previous page of related Sponsored Products  \n",
+       "18                           4.7 out of 5 stars  \n",
+       "19                           4.7 out of 5 stars  \n",
+       "20                           4.7 out of 5 stars  \n",
+       "21                           4.5 out of 5 stars  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
